deploy/src/objects/IPM_CoreParameter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for Project Scope,Project Span,STRATEGIC INTENT</description>
    <fields>
        <fullName>Q10__c</fullName>
        <label>Q10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <label>Q11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <label>Q12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>IPM CoreParameter</label>
</CustomObject>